--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.6.0
 anyio==4.2.0
 APScheduler==3.10.4
 certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 fastapi==0.109.0
@@ -17,6 +18,7 @@ python-dotenv==1.0.0
 python-telegram-bot==20.7
 pytz==2023.3.post1
 PyYAML==6.0.1
+requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.25
@@ -25,6 +27,7 @@ typer==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.4
 tzlocal==5.2
+urllib3==2.1.0
 uvicorn==0.25.0
 watchfiles==0.21.0
 websockets==12.0
